--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+# ============== 项目相关配置 ==============
+# 文件路径 示例（ Windows配置D:/barracuda/uploadPath，Linux配置 /home/barracuda/uploadPath）
+barracuda.profile=/Users/zhanghaoming/workspace/barracuda/uploadPath
 # ============== 开发环境配置 ==============
 server.port=8081
 # 应用的访问路径
@@ -6,6 +9,6 @@ server.servlet.context-path=/teacher
 # 验证码开关
 shiro.user.captchaEnabled=false
 # ============== 日志 ==============
-logging.level.root=debug
-logging.level.org.springframework=debug
+logging.level.root=warn
+logging.level.org.springframework=warn
 logging.pattern.console=%msg%n
